fix: 포스터 오버레이 확장 시 잘림 현상 해결을 위해 .scrollContainer의 overflow: hidden 제거

--- a/react-for-beginners2/src/components/CategorySlider/CategorySlider.module.css
+++ b/react-for-beginners2/src/components/CategorySlider/CategorySlider.module.css
@@ -41,10 +41,6 @@
   background-color: orange;
 }
 
-.scrollContainer {
-  overflow: hidden;
-}
-
 .innerContainer {
   position: relative;
   width: 100vw;
